examples/test/testpolicy9175.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9175
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key19: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value19
          key14: value9
          key49: value22
      podSelector:
        matchLabels:
          key47: value43
          key43: value45
          key11: value26
